# llm-query-expansion

./: .pre-commit-config.yaml  README.md  pyproject.toml
llm_query_expansion/: __main__.py  evaluate.py  expansion.py  model_wrappers.py
query_expansions/: fiqa-gemini-flash-100-special.json  fiqa-gemini-flash-100.json  fiqa-gemini-flash-150-special.json  fiqa-gemini-flash-150.json  fiqa-gemini-flash-250-special.json  fiqa-gemini-flash-250.json  nfcorpus-gemini-flash-100.json  nfcorpus-gemini-flash-150.json  nfcorpus-gemini-flash-250.json  nfcorpus-gemini-flash-long.json  nfcorpus-gemini-flash-very-long.json  nfcorpus-gemini-flash.json  scifact-gemini-flash-100-special.json  scifact-gemini-flash-100.json  scifact-gemini-flash-150-special.json  scifact-gemini-flash-150.json  scifact-gemini-flash-250-special.json  scifact-gemini-flash-250.json  scifact-gemini-flash-long.json  scifact-gemini-flash-very-long.json  scifact-gemini-flash.json  scifact-gpt-mini.json  touche-gemini-flash-100.json  touche-gemini-flash-150.json  touche-gemini-flash-250.json  treccovid-gemini-flash-100.json  treccovid-gemini-flash-150.json  treccovid-gemini-flash-250.json  treccovid-gemini-flash.json  treccovid-gpt.json
